feat: add docs for tmdbRoutes
